fix adaptive input box on mobile

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -81,6 +81,7 @@
   font-size: 25px;
   line-height: 34px;
 
+  padding: 0;
   padding-bottom: 10px;
 }
 
@@ -105,12 +106,12 @@
 }
 
 @media (max-width: 767px) {
-  .popup__title{
+  .popup__title {
     font-size: 25px;
     line-height: 34px;
     margin-bottom: 10px;
   }
-  .popup__description{
+  .popup__description {
     font-size: 14px;
     line-height: 19px;
     margin-bottom: 60px;
@@ -126,20 +127,20 @@
   .popup__close-btn span {
     height: 2px;
   }
-  .popup__input__list-item{
+  .popup__input__list-item {
     margin-bottom: 40px;
   }
-  .popup__input__list-item:last-child{
-    margin-bottom: 60pxh
+  .popup__input__list-item:last-child {
+    margin-bottom: 60pxh;
   }
-  .popup__send-btn{
+  .popup__send-btn {
     width: 100%;
     font-size: 20px;
     line-height: 27px;
     padding: 20px 115px;
   }
 
-  .popup__content{
+  .popup__content {
     width: 100%;
     padding: 80px 16px;
     margin: 0 13px;
@@ -148,5 +149,4 @@
     font-size: 18px;
     line-height: 24px;
   }
-
 }
